--- a/netlify.toml
+++ b/netlify.toml
@@ -1,18 +1,11 @@
 [build]
   publish = "public"
-  command = "hugo"
-
-[build.environment]
-  HUGO_VERSION = "0.138.0"
-  HUGO_ENV = "production"
-
-[context.deploy-preview]
-  command = "hugo --buildDrafts --buildFuture -b $DEPLOY_PRIME_URL"
-
-[context.branch-deploy]
-  command = "hugo --buildDrafts --buildFuture -b $DEPLOY_PRIME_URL"
+  command = "npm install && npm run build"
 
 [[redirects]]
   from = "/*"
   to = "/404.html"
   status = 404
+
+[build.environment]
+  NODE_VERSION = "18"
